# covid-19-vaccine-adverse-reactions

./: .gitignore  Process Notes  README.md  app.py  pyproject.toml
notebooks/: KPIs.ipynb  cleaning_VAERS.ipynb  cleaning_VAX.ipynb  cleaning_merge_datasets.ipynb  cleaning_symptoms.ipynb  reduce_dataset_size.ipynb  test.ipynb  visualizations.ipynb  visualizations_west.ipynb
notebooks/draft_notebooks/: EDA.ipynb  visualizations_original.ipynb
src/: charts.py  cleaning_VAERS.py  cleaning_symptoms.py  cleaning_vax.py  data.py  filters.py  layouts.py  test_class.py
src/draft_scripts/: test_class.py
