[project]
name = "COVID-19 Vaccine Adverse Reactions"
version = "1.0.0"
description = "<UPDATE ME>"
authors = ["S Brian Zavala <stevenbrianzavala@gmail.com>"]
requires-python = ">=3.10"
dependencies = [
    "streamlit (>=1.54.0,<2.0.0)",
    "pandas (>=2.0.0,<3.0.0)",
    "numpy (>=2.4.2,<3.0.0)",
    "kagglehub (>=1.0.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "COVID-19 Vaccine Adverse Reactions"
version = "1.0.0"
description = "<UPDATE ME>"
authors = ["S Brian Zavala <stevenbrianzavala@gmail.com>"]
package-mode = [False]