[project]
name = "COVID-19 Vaccine Adverse Reactions"
version = "1.0.0"
description = "<UPDATE ME>"
authors = ["S Brian Zavala <stevenbrianzavala@gmail.com>"]
requires-python = ">=3.10"
dependencies = [
    "streamlit (>=1.54.0,<2.0.0)",
    "pandas (>=2.0.0,<3.0.0)",
    "numpy (>=2.4.2,<3.0.0)",
    "kagglehub (>=1.0.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "COVID-19 Vaccine Adverse Reactions"
version = "1.0.0"
description = "<UPDATE ME>"
authors = ["S Brian Zavala <stevenbrianzavala@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11"
ipykernel = "^7.2.0"
pandas = "^3.0.1"
scipy = "^1.17.1"
scipy-stubs = "~=1.17.1"
seaborn = "^0.13.2"
