[project]
name = "covid-19-vaccine-adverse-reactions"
version = "1.0.0"
description = "<UPDATE ME>"
authors = [
    {email = "S Brian Zavala <stevenbrianzavala@gmail.com>"}
]
requires-python = ">=3.11"
dependencies = [
    "streamlit (>=1.54.0,<2.0.0)",
    "pandas (>=2.0.0,<3.0.0)",
    "numpy (>=2.4.2,<3.0.0)",
    "kagglehub (>=1.0.0,<2.0.0)",
    "kaggle (>1.8.4,<=2.0.0)",
    "scipy (>1.17.0,<=1.17.1)",
    "seaborn (>0.13.1,<=0.13.2)",
    "plotly (>6.5.1,<=6.5.2)",
    "ipykernel (>7.1.0,<=7.2.0)",
    "notebook (>=7.5.4,<8.0.0)",
    "tqdm (>=4.67.3,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false